test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-test
  template:
    metadata:
      labels:
        app: web-test
    spec:
      containers:
      - name: nginx
        image: nginxx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: web-test-service
spec:
  type: ClusterIP
  selector:
    app: web-test
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-test-service
            port:
              number: 80
